<resources>
    <string name="app_name">Flashcards</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Flashcards</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_card_administration_title">Karteikartenübersicht</string>
    <string name="nav_random_title">Zufällige Auswahl</string>
    <string name="nav_statistics_title">Statistiken</string>
    <string name="nav_settings_title">Einstellungen</string>
    <string name="nav_about_title">Über</string>
    <string name="title_activity_new_card">Neue Karte</string>
    <string name="title_activity_about">Über</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_statistics">Statistiken</string>
    <string name="title_activity_card_administration">Karteikartenübersicht</string>
    <string name="title_activity_random_selection">Zufällige Auswahl</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="new_category_item">Neue Kategorie hinzufügen...</string>
    <string name="hint_title">Frage</string>
    <string name="hint_text">Kartentext</string>
    <string name="btn_save_new_card">Neue Karte anlegen</string>
    <string name="category_title">Kategorie</string>
    <string name="ok">Ok</string>
    <string name="cancel">Abbrechen</string>
    <string name="num_of_cards">Anzahl Karten:</string>
    <string name="num_of_viewed">Angesehen:</string>

    <string-array name="category_array">
        <item>"Kategorie wählen..."</item>
        <item>"Neue Kategorie..."</item>
    </string-array>

</resources>
