<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_card_administration"
            android:icon="@drawable/ic_card_administration"
            android:title="@string/nav_card_administration_title" />
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/ic_random"
            android:title="@string/nav_random_title" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/nav_statistics_title" />
        <!--<item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings_title" /> -->
    </group>

    <item android:title="Sonstiges">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/nav_about_title" />
        </menu>
    </item>

</menu>
