<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Statistics"
    tools:showIn="@layout/app_bar_statistics"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category_array"
        android:prompt="@string/category_title"
        android:spinnerMode="dialog"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textView_num_of_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/num_of_cards"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_num_of_viewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/num_of_viewed"
        android:textColor="#000"
        android:textSize="16sp" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/idPieChart"
        android:layout_width="344dp"
        android:layout_height="280dp">
    </com.github.mikephil.charting.charts.PieChart>
</LinearLayout>